[package]
name = "wuxia-t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
assets_manager = { version = "0.7.2", features = ["toml", "hot-reloading"] }
