[package]
name = "wuxia-t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.18", features = ["serde"] }
crossterm = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assets_manager = { version = "0.7.2", features = ["json", "hot-reloading"] }
dirs = "4"
chrono = "0.4"
